Fixing issue with slider z-index

--- a/src/pages/Quest/QuestInfo/Company.module.scss
+++ b/src/pages/Quest/QuestInfo/Company.module.scss
@@ -1,5 +1,6 @@
 .main {
   position: absolute;
+  z-index: 2;
   right: 112px;
   bottom: 132px;
   width: 246px;
