--- a/src/pages/Quest/Slider/Slider.module.scss
+++ b/src/pages/Quest/Slider/Slider.module.scss
@@ -13,7 +13,6 @@
       display: block;
       width: 100%;
       height: auto;
-      min-height: 560px;
     }
   }
 }
